@@ -1,6 +1,6 @@
 ## This file is part of the YAZ toolkit.
 ## Copyright (C) 1995-2007, Index Data, All rights reserved.
-## $Id: Makefile.am,v 1.65 2007-04-26 21:45:17 adam Exp $
+## $Id: Makefile.am,v 1.66 2007-04-30 08:29:07 adam Exp $
 
 YAZ_VERSION_INFO=3:0:0
 
@@ -93,7 +93,8 @@ libyaz_la_SOURCES=version.c options.c log.c \
   test.c timing.c \
   xmlquery.c http.c \
   mime.c mime.h oid_util.c tokenizer.c \
-  record_conv.c retrieval.c elementset.c snprintf.c query-charset.c
+  record_conv.c retrieval.c elementset.c snprintf.c query-charset.c \
+  copy_types.c
 
 libyaz_la_LDFLAGS=-version-info $(YAZ_VERSION_INFO)
 
